# Modern-Apps-DitheringCamera

./: .gitignore  .gitmodules  README.md  analyze.ps1  gradle.properties  proguard-rules.pro  release.sh  settings.gradle.kts  version.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: android.yml
calendar/: build.gradle.kts
camera/: build.gradle.kts
clock/: build.gradle.kts
contacts/: build.gradle.kts
crypto/: build.gradle.kts
education/: build.gradle.kts
email/: build.gradle.kts
everysync/: build.gradle.kts
files/: build.gradle.kts
findfamily/: build.gradle.kts
games/alchemist/: build.gradle.kts
games/chess/: build.gradle.kts
games/pipes/: build.gradle.kts
games/solitaire/: build.gradle.kts
games/unblockjam/: build.gradle.kts
games/wordmaker/: build.gradle.kts
gradle/: libs.versions.toml
health/: build.gradle.kts
launcher/: build.gradle.kts
maps/: build.gradle.kts
messages/: build.gradle.kts
music/: build.gradle.kts
notes/: build.gradle.kts
office/: build.gradle.kts
openassistant/: build.gradle.kts
passwords/: build.gradle.kts
pdf/: build.gradle.kts
pdf/rust/: Cargo.toml  README.md
pdf/rust/src/: lib.rs
photos/: build.gradle.kts
scratch/apk_analysis/: all_unique_files.tsv  shared_files.tsv
scripts/chess/: extract_learn.py  generate_puzzles.py
scripts/maps/: .gitignore  generator.cpp
scripts/pipes/: generate_levels.py  (+2 more)
things/: build.gradle.kts
weather/: build.gradle.kts
web/: build.gradle.kts
whatsapp-signal/: build.gradle.kts
youpipe/: build.gradle.kts
(+6834 files in other folders)
