[package]
name = "pdf_render"
version = "0.1.0"
edition = "2021"
description = "Memory-safe PDF content-stream interpreter (lopdf) for the 'Open PDF (safe)' viewer, exposed to Kotlin via JNI"
license = "GPL-2.0-only"

[lib]
name = "pdf_render"
crate-type = ["cdylib", "rlib"]

[dependencies]
lopdf = "0.36"
jni = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
